Project upgraded to Laravel 5.2. Added redirection to user panel after successful registration via e-mail.

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,10 @@ FB_REDIRECT=http://tuts1.dev/social/handle/facebook
 TW_ID=i5dyGfOCSstOTYjpKwSq5j9LI
 TW_SECRET=HgHeiEpCUtxFnY5BTJbspYjXFFlwvjYvQpDrmke2EerLz42OlG
 TW_REDIRECT=http://tuts1.dev/social/handle/twitter
+
+GOOGLE_ID=15385807761-rmch7meueerdtdbltgvhts9l47t3ou98.apps.googleusercontent.com
+GOOGLE_SECRET=TFhMdQ_LheO3MEn3KHradDnO
+GOOGLE_REDIRECT=http://www.tuts1.dev/social/handle/google
+
+RE_CAP_SITE=6LfAcwkTAAAAAIpZmjqpo-DQ4JWedQ2ywsw4T6qK
+RE_CAP_SECRET=6LfAcwkTAAAAAJx5gxqn0S4jguJ-HrJmu7vfpUyI
