--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,9 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
+MAIL_ADDRESS=tuts@codingo.me
+MAIL_FROM='Codingo Tuts'
+
 FB_ID=356607781215457
 FB_SECRET=8559049c87f48992eb9124c3faba69fc
 FB_REDIRECT=http://tuts1.dev/social/handle/facebook
@@ -31,4 +34,4 @@ GOOGLE_SECRET=TFhMdQ_LheO3MEn3KHradDnO
 GOOGLE_REDIRECT=http://www.tuts1.dev/social/handle/google
 
 RE_CAP_SITE=6LfAcwkTAAAAAIpZmjqpo-DQ4JWedQ2ywsw4T6qK
-RE_CAP_SECRET=6LfAcwkTAAAAAJx5gxqn0S4jguJ-HrJmu7vfpUyI
+RE_CAP_SECRET=6LfAcwkTAAAAAJx1gxqn0S4jguJ-HrJmu7vfpUyI
