--- a/.env.example
+++ b/.env.example
@@ -33,5 +33,9 @@ GOOGLE_ID=15385807761-rmch7meueerdtdbltgvhts9l47t3ou98.apps.googleusercontent.co
 GOOGLE_SECRET=TFhMdQ_LheO3MEn3KHradDnO
 GOOGLE_REDIRECT=http://www.tuts1.dev/social/handle/google
 
+GITHUB_ID=2c7a1f4e6116f4914274
+GITHUB_SECRET=249bb53677565434ead5d27b06a8f85f666ad7af58
+GITHUB_REDIRECT=http://social-laravel.dev/social/handle/github
+
 RE_CAP_SITE=6LfAcwkTAAAAAIpZmjqpo-DQ4JWedQ2ywsw4T6qK
 RE_CAP_SECRET=6LfAcwkTAAAAAJx1gxqn0S4jguJ-HrJmu7vfpUyI
