App URL added to .env file, needed for queue to send emails with working links.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
+APP_URL=http://social-laravel.dev
 
 ACTIVATION=false
 
@@ -25,15 +26,15 @@ MAIL_FROM='Codingo Tuts'
 
 FB_ID=356607781215457
 FB_SECRET=8559049c87f48992eb9124c3faba69fc
-FB_REDIRECT=http://tuts1.dev/social/handle/facebook
+FB_REDIRECT=http://social-laravel.dev/social/handle/facebook
 
 TW_ID=i5dyGfOCSstOTYjpKwSq5j9LI
 TW_SECRET=HgHeiEpCUtxFnY5BTJbspYjXFFlwvjYvQpDrmke2EerLz42OlG
-TW_REDIRECT=http://tuts1.dev/social/handle/twitter
+TW_REDIRECT=http://social-laravel.dev/social/handle/twitter
 
 GOOGLE_ID=15385807761-rmch7meueerdtdbltgvhts9l47t3ou98.apps.googleusercontent.com
 GOOGLE_SECRET=TFhMdQ_LheO3MEn3KHradDnO
-GOOGLE_REDIRECT=http://www.tuts1.dev/social/handle/google
+GOOGLE_REDIRECT=http://social-laravel.dev/social/handle/google
 
 GITHUB_ID=2c7a1f4e6116f4914274
 GITHUB_SECRET=249bb53677565434ead5d27b06a8f85f666ad7af58
